<resources>
    <string name="app_name" translatable="false">LogandRegApp</string>
    <string name="app_in_name" translatable="false">Задание 1</string>
    <string name="app_in_name_reglog" translatable="false">Регистрация и вход</string>
    <string name="text_btn" translatable="false">Войти в учетную запись 😌</string>
    <string name="text_btnsigin" translatable="false">Войти</string>
    <string name="text_btnreg" translatable="false">Регистрация</string>
    <string name="email" translatable="false">Email</string>
    <string name="title_activity_map">MapActivity</string>

</resources>