<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:background='@drawable/images'
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_in_name_reglog"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/tbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_btn"
        android:textColor="@color/tbtn"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_above="@+id/tbtn"
        android:layout_marginTop="25dp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnsigin"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:text="@string/text_btnsigin" />

        <Button
            android:id="@+id/btnreg"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:text="@string/text_btnreg" />
    </LinearLayout>
</RelativeLayout>